# pkg/api/docs/swagger.json
@@ -1313,7 +1313,7 @@
             "type": "object",
             "properties": {
                 "build": {
-                    "$ref": "#/definitions/ProjectBuild"
+                    "$ref": "#/definitions/ProjectBuildConfig"
                 },
                 "envVars": {
                     "type": "object",
@@ -1346,10 +1346,10 @@
         "CreateProjectDTO": {
             "type": "object",
             "properties": {
-                "existingProjectConfig": {
-                    "$ref": "#/definitions/ExistingProjectConfigDTO"
+                "existingConfig": {
+                    "$ref": "#/definitions/ExistingConfigDTO"
                 },
-                "newProjectConfig": {
+                "newConfig": {
                     "$ref": "#/definitions/CreateProjectConfigDTO"
                 }
             }
@@ -1377,7 +1377,15 @@
                 }
             }
         },
-        "ExistingProjectConfigDTO": {
+        "DevcontainerConfig": {
+            "type": "object",
+            "properties": {
+                "filePath": {
+                    "type": "string"
+                }
+            }
+        },
+        "ExistingConfigDTO": {
             "type": "object",
             "properties": {
                 "branch": {
@@ -1587,7 +1595,7 @@
             "type": "object",
             "properties": {
                 "build": {
-                    "$ref": "#/definitions/ProjectBuild"
+                    "$ref": "#/definitions/ProjectBuildConfig"
                 },
                 "default": {
                     "type": "boolean"
@@ -1615,19 +1623,11 @@
                 }
             }
         },
-        "ProjectBuild": {
+        "ProjectBuildConfig": {
             "type": "object",
             "properties": {
                 "devcontainer": {
-                    "$ref": "#/definitions/ProjectBuildDevcontainer"
-                }
-            }
-        },
-        "ProjectBuildDevcontainer": {
-            "type": "object",
-            "properties": {
-                "devContainerFilePath": {
-                    "type": "string"
+                    "$ref": "#/definitions/DevcontainerConfig"
                 }
             }
         },
@@ -1635,7 +1635,7 @@
             "type": "object",
             "properties": {
                 "build": {
-                    "$ref": "#/definitions/ProjectBuild"
+                    "$ref": "#/definitions/ProjectBuildConfig"
                 },
                 "default": {
                     "type": "boolean"
